feat: Scene now has Composite Primary Key wip: Need to adjust API responses
